Bump version to flyway-9.18.0
Bump maven version to address CVE-2021-29425

Implement adjusting block depth in postgres parser to support begin atomic function definitions

Closes #3665: Only warn if reports are unable to write to the default location